# Tsoa with Express/src/docs/swagger.json
@@ -14,6 +14,10 @@
 					},
 					"email": {
 						"type": "string"
+					},
+					"age": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
@@ -148,6 +152,11 @@
 						"content": {
 							"application/json": {
 								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/UserServicePrams"
+										}
+									],
 									"nullable": true
 								}
 							}
@@ -237,6 +246,25 @@
 						}
 					}
 				]
+			}
+		},
+		"/v1/users/hello/jest": {
+			"get": {
+				"operationId": "HelloJest",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
